index.css
/************************
        GENERAL
************************/

html, body {
  font-weight: 100;
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: 'Raleway', sans-serif;
  color: #333;
  letter-spacing: 2px;
  text-rendering: optimizeLegibility;
}

a {
  color: black;
  text-transform: uppercase;
  font-size: 16px;
  padding: 5px;
  text-decoration: none;
}

a:hover {
  color: #333;
  text-decoration: none;
  border: 1px solid black;
}

::selection {
  background: #E9E9E9;
}

li {
  display: inline-block;
  padding: 0 20px;
  list-style: none;
}


hr {
  color: black;
  width: 50%;
}

.headerText {
  font-size: 30px;
}

.wrapper {
  height: 100%;
  height: auto !important;
}

#footer, .push {
  height: 2em;
  clear: both;
}

.slide {
  text-align: center;
  margin: 0 auto;
}


/************************
      INTRO
************************/

#intro {
  line-height: 40px;
  color: white;
  padding: 250px 0;
  background: #F5CACB;
}

#intro h1 {
  text-transform: uppercase;
  font-size: 3em;
  text-align: center;
  color: white;
}

.navbar {
  width: 80%;
  margin: 0 auto;
  text-align: center;
  margin-top: 10px;
}


/************************
        PROJECTS
************************/

#work {
  background-color: black;
  color: white;
}

#work h1 {
  font-size: 2.5em;
  padding: 50px 0;
  margin: 0;
}

#work img {
  max-width: 100%;
  height: auto;
  display: block;
  margin: 0 auto;
}

td .caption {
  display: none;
  height: 100%;
  left: 0;
  right: 0;
  position: absolute;
  top: 0;
}

td:hover .caption{
  display: block;
  background: black;
  opacity: .9;
  color: white;
  margin: 0 auto;
  padding-top: 100px;
}

.caption {
  line-height: 1.5;
}

#work td {
  overflow: hidden;
  position: relative;
  text-align: center;
  margin: 0 auto;
  width: 50%;
  height: 50%;
  padding: 20px;
}

#work a {
  color: #F5CACB;
}

/************************
        SKILLS
************************/

#skills {
  background: #F5CACB;
  color: white;
}

#skills h1 {
  padding: 250px 0;
  font-size: 3em;
  display: inline-block;
  margin: 0 auto;
}


/************************
        ABOUT
************************/

#about2 {
  background: black;
  color: white;
  font-size: 2em;
}

#about2 h3 {
  padding: 250px 50px;
  margin: 0;
}


/************************
        ABOUT
************************/

#about {
  margin: 0px auto;
  font-size: 18px;
}


.aboutText {
  margin: 0 auto;
  width: 80%;
  padding-bottom: 100px;
  text-align: center;
}

.photo {
  margin: 0 auto;
  text-align: center;
  margin-top: 50px;
  width: 80%;
}

.photo img {
  margin: 0 auto;
  width: 100%;
}


/************************
        FOOTER
************************/

#footer {
  background: #F5CACB;
  text-align: center;
  margin: 0 auto;
  width: 100%;
  bottom: 0;
  padding-top: 50px;
  padding-bottom: 100px;
}

#footer ul {
  padding: 0px;
  padding-bottom: 20px;
}

#footer li {
  margin-right: 10px;
  display: inline-block;
}


.contacts img {
  width: 15px;
  margin-right: 5px;
}

#footer h5 {
 font-weight: 1000;
}

/******************
  RESPONSIVE
*******************/

@media (max-width: 810px) and (min-width: 320px) {

  body {
    font-size: 16px;
    line-height: 1.3;
    margin: 0 auto;
  }

  .headerText {
    margin-top: 50px;
    font-size: 22px;
    font-weight: 700;
  }

  .navbar li {
    display: block;
  }

  #intro, #about {
    height: auto;
    margin: 0 auto;
  }

  #intro {
    font-size: 20px;
  }

  .work tr, td {
    display: block;
  }

  #work td {
    padding: 0;
    display: block;
    width: 100%;
    margin-left: 0;
    margin-right: 0;
    margin: 0 auto;
   }

  .photo img {
     width: 100%;
   }

   .skills {
     text-align: left;
   }

   #frontendList {
     display: inline-block;
   }

   #backendList {
     display: inline-block;
     text-align: left;
     margin: 0;
   }

   #footer li {
    display: block;
   }

   hr {
     width: 100%;
   }

}

